Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -592,11 +592,56 @@ flowchart LR
     Install --> Comm[Secure Communication Using Certificate]
     Comm --> Verify
 
-    %% Security Pillar Note
-    Pillar[Information Security Pillar AUTHENTICATION]
-    Valid --> Pillar
-
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
+### Open Questions ###
+
+1. How does a digital signature ensure message integrity?
+<details>
+  <summary>Show answer</summary>
+A digital signature uses a hash function to create a unique fingerprint of the message. The sender encrypts this hash using their private key. When the recipient decrypts the signature with the sender’s public key and recomputes the hash on the received message, matching values confirm the message has not been altered in transit.
+</details>
+
+2. Why does a digital signature provide non-repudiation?
+<details>
+  <summary>Show answer</summary>
+Only the sender holds their private key, which is required to generate the signature. If the signature verifies correctly using their public key, the sender cannot later deny signing the document. This accountability is critical in legal, financial, and regulatory contexts.
+</details>
+
+3. What role does public-key infrastructure (PKI) play in digital certificates?
+<details>
+  <summary>Show answer</summary>
+PKI provides the framework for issuing, validating, and managing digital certificates. Certificate Authorities (CAs) verify identities and digitally sign certificates, ensuring that public keys can be trusted for secure communications.
+</details>
+
+4. How are hash functions used in the digital signature process?
+<details>
+  <summary>Show answer</summary>
+Hash functions generate a fixed-size digest from the original message. This digest, rather than the full message, is signed using the sender’s private key, making the signing process faster and ensuring that even a tiny change in the message produces a completely different hash.
+</details>
+
+5. What information does a digital certificate contain, and why is it important?
+<details>
+  <summary>Show answer</summary>
+A certificate includes the subject’s public key, identity details (name, organization), validity period, and the CA’s digital signature. This information binds a public key to its owner, enabling recipients to verify that the key is authentic and belongs to the claimed individual or entity.
+</details>
+
+6. How does a Certificate Authority verify the identity of a requester?
+<details>
+  <summary>Show answer</summary>
+The CA validates the requester’s identity using organizational documents, domain ownership checks, or extended validation procedures, depending on the certificate type. Only after successful verification does the CA issue and sign the certificate.
+</details>
+
+7. How do digital certificates relate to the five pillars of information security?
+<details>
+  <summary>Show answer</summary>
+Digital certificates primarily address Authentication, ensuring that a public key truly belongs to its claimed owner. They indirectly support Integrity and Non-repudiation when used with digital signatures, while also contributing to Confidentiality when paired with encryption.
+</details>
+
+8. What happens if a digital certificate is compromised or expires?
+<details>
+  <summary>Show answer</summary>
+If a certificate is compromised, the CA revokes it using a Certificate Revocation List (CRL) or Online Certificate Status Protocol (OCSP). If it expires, it is no longer trusted, and the owner must request a new certificate. Both actions prevent misuse of invalid credentials.
+</details>
