Update 3.07 Understand methods of cryptanalytic attacks.md

--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -150,3 +150,68 @@ Cryptographic audits and testing to eliminate implementation flaws.
 Together, these measures ensure that ciphertext reveals no exploitable patterns, rendering ciphertext-only attacks impractical against modern cryptosystems.
 </details>
 ---
+
+
+## 3.7.2 Known plaintext  ##
+
+Known-plaintext attacks are a type of cryptanalytic attack where **the attacker has access to both the ciphertext (the encrypted message) and the corresponding plaintext (the original, unencrypted message)**. The goal of this attack is to use the known relationship between the plaintext and ciphertext to deduce the encryption key or break the encryption scheme.
+
+Here's how it works:
+1. The Attacker's Knowledge: In a known-plaintext attack, the attacker already knows some part of the plaintext and has access to the corresponding ciphertext (the encrypted version of that plaintext). For example, the attacker might know that part of a message is a common greeting like "Hello," and they can also see the encrypted version of that greeting.
+
+2. Using the Known Relationship: The attacker compares the known plaintext to the ciphertext to analyze how the encryption system transformed the plaintext into ciphertext. If the encryption algorithm has patterns or weaknesses, the attacker may be able to use these to figure out the encryption key or uncover more about how the cipher works.
+
+3. Finding the Encryption Key: By analyzing multiple pairs of known plaintext and ciphertext, the attacker can start to make educated guesses about the encryption key. Once the key is discovered, the attacker can decrypt any other ciphertext that was encrypted with the same key.
+
+```mermaid
+
+flowchart TB
+  subgraph Attacker
+    A1[Obtain Ciphertext Samples]
+    A2[Acquire Known Plaintext Fragments]
+  end
+
+  subgraph Target
+    T1[Encrypted Messages]
+    T2[Encryption Scheme in Use]
+  end
+
+  A1 --> Align[Align known plaintext with ciphertext]
+  A2 --> Align
+
+  Align --> Analyse[Analyse relationship between plaintext and ciphertext]
+  Analyse --> Derive[Derive keystream bits or key material]
+  Derive --> Test[Test candidate key or keystream on other ciphertext]
+  Test --> Success{Valid plaintext recovered?}
+  Success -->|Yes| Compromise[Decrypt more messages or impersonate sender]
+  Success -->|No| Iterate[Refine hypotheses or collect more pairs] --> Analyse
+
+  %% Examples
+  subgraph Examples
+    E1[Stream cipher with keystream reuse]
+    E2[Crib dragging on known headers or protocol bytes]
+    E3[Exploiting weak deterministic IV use in block mode]
+  end
+
+  Analyse --> E1
+  Analyse --> E2
+  Analyse --> E3
+
+  %% Mitigations
+  subgraph Mitigations
+    M1[Use unique nonces and IVs per message]
+    M2[Avoid keystream reuse]
+    M3[Apply authenticated encryption with integrity checks]
+    M4[Rotate keys regularly and protect key material in HSM]
+    M5[Minimize predictable plaintext and pad or randomize message formats]
+  end
+
+  Compromise -. mitigated by .-> M1
+  Compromise -. mitigated by .-> M2
+  Compromise -. mitigated by .-> M3
+  Compromise -. mitigated by .-> M4
+  Compromise -. mitigated by .-> M5
+
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
