--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -97,7 +97,7 @@ Examples of Ciphertext-Only Attacks are:
 
 4. Attacks on Block Ciphers: Modern block ciphers like AES are generally resistant to ciphertext-only attacks. However, certain weak implementations or side-channel vulnerabilities (like improper padding or poor random number generation) can provide clues that lead to successful attacks. An attacker might leverage patterns in the ciphertext to reverse-engineer the encryption key or plaintext.
 
-5. ### Open Questions ###
+### Open Questions ###
 
 1. What makes ciphertext-only attacks fundamentally more difficult than other cryptanalytic attacks?
 <details>
@@ -155,6 +155,9 @@ Together, these measures ensure that ciphertext reveals no exploitable patterns,
 ## 3.7.2 Known plaintext  ##
 
 Known-plaintext attacks are a type of cryptanalytic attack where **the attacker has access to both the ciphertext (the encrypted message) and the corresponding plaintext (the original, unencrypted message)**. The goal of this attack is to use the known relationship between the plaintext and ciphertext to deduce the encryption key or break the encryption scheme.
+
+:brain: Known plaintext attacks are based on cribs. In cryptography, a crib is a piece of plaintext that the attacker expects or guesses to appear in the encrypted message (ciphertext).
+
 
 Here's how it works:
 1. The Attacker's Knowledge: In a known-plaintext attack, the attacker already knows some part of the plaintext and has access to the corresponding ciphertext (the encrypted version of that plaintext). For example, the attacker might know that part of a message is a common greeting like "Hello," and they can also see the encrypted version of that greeting.
@@ -215,3 +218,35 @@ flowchart TB
 classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
 classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+1. What is the main requirement for carrying out a known-plaintext attack?
+<details>
+  <summary>Show answer</summary>
+The attacker must have access to both the plaintext (the original unencrypted message) and the corresponding ciphertext. This pairing allows them to study how the encryption algorithm transforms plaintext into ciphertext and potentially reveal weaknesses or parts of the encryption key.
+</details>
+
+2. How do cribs support a known-plaintext attack?
+<details>
+  <summary>Show answer</summary>
+A crib is a piece of plaintext that the attacker expects or guesses will appear in the ciphertext, such as common greetings or predictable headers. By aligning these cribs with the ciphertext, attackers can deduce how the cipher operates and reduce the effort needed to find the encryption key.
+</details>
+
+3. Why are multiple plaintext-ciphertext pairs valuable in a known-plaintext attack?
+<details>
+  <summary>Show answer</summary>
+With several known pairs, attackers can look for consistent patterns in how plaintext is transformed into ciphertext. These patterns can reveal structural weaknesses in the algorithm and help the attacker reconstruct the encryption key more quickly and reliably.
+</details>
+
+4. What is the ultimate goal of a known-plaintext attack?
+<details>
+  <summary>Show answer</summary>
+The goal is to determine the encryption key or uncover enough information about the encryption process to decrypt other ciphertexts encrypted with the same key. Once the key is recovered, the attacker can read all messages secured with it.
+</details>
+
+5. How do modern encryption algorithms resist known-plaintext attacks?
+<details>
+  <summary>Show answer</summary>
+Modern algorithms like AES are designed to prevent patterns between plaintext and ciphertext from being exploited. Techniques such as using strong key sizes, random initialization vectors (IVs), and proper padding ensure that even with known plaintext, it is computationally infeasible to deduce the encryption key.
+</details>
+
+
