Update 3.07 Understand methods of cryptanalytic attacks.md

--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -219,6 +219,8 @@ classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-
 classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
+### Open Questions ###
+
 1. What is the main requirement for carrying out a known-plaintext attack?
 <details>
   <summary>Show answer</summary>
@@ -249,4 +251,40 @@ The goal is to determine the encryption key or uncover enough information about 
 Modern algorithms like AES are designed to prevent patterns between plaintext and ciphertext from being exploited. Techniques such as using strong key sizes, random initialization vectors (IVs), and proper padding ensure that even with known plaintext, it is computationally infeasible to deduce the encryption key.
 </details>
 
+---
 
+## 3.7.4 Frequency analysis ##
+
+Frequency analysis is a cryptanalytic technique used to break ciphers, particularly substitution ciphers, by analyzing the frequency of letters or groups of letters in the ciphertext. It is based on the idea that in any given language, certain letters or combinations of letters appear more frequently than others. For example, in English, the letter "E" is the most common letter, and combinations like "TH" or "ER" are very frequent.
+Here’s how frequency analysis works:
+
+An attacker using frequency analysis starts by looking at the ciphertext, which is the encrypted version of the message. The attacker doesn't know the plaintext, but they can make educated guesses about it based on patterns in the ciphertext. The first thing they do is count how often each letter or combination of letters appears in the ciphertext. In many languages, certain letters will appear more often than others, so the attacker can use this information to make guesses about which letters in the ciphertext correspond to which letters in the plaintext.
+For example, if the letter "X" appears very frequently in the ciphertext, the attacker might guess that "X" corresponds to the letter "E" in the plaintext, since "E" is the most common letter in English. Similarly, if the pair of letters "SZ" appears frequently in the ciphertext, the attacker might guess that "SZ" corresponds to the most common pair of letters in the language, like "ER" or "TH."
+The attacker may continue this process by looking for other common patterns in the ciphertext, such as single letters or common letter pairs, and making educated guesses about the plaintext. Over time, as more and more of the ciphertext is matched with the correct plaintext letters, the attacker may be able to decipher the entire message, or at least large portions of it.
+
+:brain: Frequency analysis is particularly effective against simple ciphers, like the Caesar cipher or monoalphabetic substitution cipher, because these ciphers have predictable patterns that can be exploited. 
+
+For instance, in a monoalphabetic substitution cipher, each letter in the plaintext is replaced with another letter in the ciphertext, and this substitution is consistent throughout the message. This consistency allows the attacker to use the frequency of letters in the ciphertext to figure out which letter in the ciphertext corresponds to which letter in the plaintext.
+Modern encryption techniques, such as those used in algorithms like AES, are designed to resist frequency analysis by using complex methods of substitution and permutation that do not leave obvious patterns in the ciphertext. These methods make it much harder for an attacker to apply frequency analysis effectively.
+
+### Open Questions ###
+
+1. What is the principle behind frequency analysis in cryptography?
+<details>
+  <summary>Show answer</summary>
+Frequency analysis relies on the fact that certain letters or letter combinations appear more frequently than others in a given language. For example, in English, "E" is the most common letter, while pairs like "TH" or "ER" occur very often. By comparing these statistical patterns in ciphertext with expected frequencies in plaintext, attackers can make educated guesses about the substitutions used.
+</details>
+
+2. Which types of ciphers are most vulnerable to frequency analysis?
+<details>
+  <summary>Show answer</summary>
+Simple substitution-based ciphers, such as the Caesar cipher or monoalphabetic substitution cipher, are highly vulnerable. These ciphers consistently replace one plaintext letter with the same ciphertext letter, preserving the statistical frequency patterns of the language.
+</details>
+
+3. Why is frequency analysis less effective against modern encryption algorithms?
+<details>
+  <summary>Show answer</summary>
+Modern algorithms like AES use complex mathematical transformations (substitution, permutation, key mixing, and randomization) that remove detectable patterns from ciphertext. As a result, the frequency distribution of ciphertext symbols appears nearly uniform, making statistical analysis ineffective.
+</details>
+
+---
