Update 3.07 Understand methods of cryptanalytic attacks.md

--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -288,3 +288,36 @@ Modern algorithms like AES use complex mathematical transformations (substitutio
 </details>
 
 ---
+
+## 3.7.5 Chosen ciphertext  ##
+
+Chosen-ciphertext attack (CCA) is a type of cryptanalytic attack where the attacker can choose specific ciphertexts to be decrypted and analyze the resulting plaintexts in order to gain information that can help break the encryption scheme. Unlike other attacks where the attacker only has access to ciphertexts (encrypted messages) and sometimes plaintexts (the original messages), in a chosen-ciphertext attack, the attacker has the ability to choose the ciphertexts they want to decrypt and can examine the decrypted versions of those ciphertexts.
+
+In a chosen-ciphertext attack, the attacker has access to an encryption system and can submit chosen ciphertexts for decryption. These ciphertexts are typically manipulated by the attacker in an attempt to gather information about the encryption key or the encryption process. The attacker may submit a ciphertext they created and receive the corresponding decrypted plaintext in return. This allows the attacker to analyze the plaintext and ciphertext pair and attempt to discern any patterns or weaknesses in the encryption system. The attack works because the attacker can experiment with different ciphertexts and observe how the system responds. By observing how small changes in the ciphertext affect the decrypted output, the attacker can potentially deduce information about the key or the encryption algorithm itself. This method can be used iteratively, with the attacker refining their guesses as they get more information from the system.
+
+For example, in an encryption system where the attacker can submit ciphertexts for decryption, the attacker might choose a ciphertext that corresponds to a specific word or pattern. They can then analyze the decrypted output to see how the system handles that specific ciphertext. By submitting a variety of different ciphertexts and analyzing the decrypted messages, the attacker can gradually learn more about how the encryption works and potentially break the cipher.
+
+:bulb: One of the dangers of chosen-ciphertext attacks is that they are more powerful than simpler attacks, such as ciphertext-only attacks, because the attacker has the ability to control which ciphertexts are chosen for decryption. This additional control allows the attacker to experiment and gather more information to eventually break the system.
+
+### Open Questions ###
+
+1. What makes a chosen-ciphertext attack more powerful than a ciphertext-only attack?
+<details>
+  <summary>Show answer</summary>
+In a ciphertext-only attack, the attacker can only observe encrypted messages without knowing their plaintexts. In contrast, in a chosen-ciphertext attack, the attacker can submit ciphertexts of their choice for decryption and analyze the resulting plaintexts. This extra control gives attackers deeper insight into how the encryption system works, making it easier to uncover the key or structural weaknesses.
+</details>
+
+2. How does an attacker exploit decryption behavior in a chosen-ciphertext attack?
+<details>
+  <summary>Show answer</summary>
+The attacker manipulates ciphertexts and observes how small changes affect the decrypted plaintext. By analyzing these differences, they can deduce relationships between ciphertext and plaintext, learn about the encryption key, or identify algorithmic flaws. Over multiple iterations, this feedback loop allows attackers to refine their strategy until they can break or weaken the encryption scheme.
+</details>
+
+3. What are some real-world examples of systems vulnerable to chosen-ciphertext attacks?
+<details>
+  <summary>Show answer</summary>
+Early versions of RSA without padding (textbook RSA) were vulnerable to CCA because attackers could craft ciphertexts and learn information from decrypted outputs. Another example is the Bleichenbacher attack against RSA with PKCS#1 v1.5 padding, where carefully chosen ciphertexts allowed attackers to recover session keys. These attacks highlight the importance of modern protections like CCA-secure padding schemes (e.g., OAEP for RSA).
+</details>
+
+---
+
