Update 3.07 Understand methods of cryptanalytic attacks.md

--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -321,3 +321,128 @@ Early versions of RSA without padding (textbook RSA) were vulnerable to CCA beca
 
 ---
 
+## 3.7.6 Implementation attacks  ##
+
+Implementation attacks refer to the attacks targeting vulnerabilities that arise from the way cryptographic algorithms or systems are implemented rather than weaknesses in the algorithms themselves. These attacks exploit flaws in the actual deployment or execution of cryptographic protocols, making them potentially more dangerous than attacks aimed at breaking the underlying algorithm. In simpler terms, an attacker takes advantage of errors in how encryption or decryption processes are programmed or executed. In an implementation attack, the attacker does not need to break the cryptographic algorithm's theory or structure. Instead, they focus on how the algorithm is implemented in software or hardware. Cryptographic algorithms are complex and often require precise implementation details, and any mistakes or oversights in how they are programmed can create weaknesses that an attacker can exploit.
+
+These are common types of implementation attacks:
+
+1. Side-channel attacks: These attacks target physical or timing aspects of a system’s execution, such as electromagnetic leaks, power consumption, or even the time it takes to perform cryptographic operations. For example, an attacker could measure how long it takes to perform a decryption and use that timing information to guess the key.
+
+
+2. Timing attacks: In a timing attack, the attacker measures the time taken by a system to perform certain operations and uses this data to extract information about the encryption key or the plaintext. For instance, if a system takes longer to process certain cryptographic operations based on specific input values, the attacker can infer useful details.
+
+
+3. Fault injection attacks: This type of attack involves deliberately introducing faults or errors into a system (for example, by manipulating the hardware or the environment in which it operates) to force the system into an incorrect state. This can allow an attacker to recover cryptographic keys or plaintext data by analyzing how the system behaves under these manipulated conditions.
+
+
+4. Implementation bugs: Even with a theoretically secure algorithm, software or hardware bugs can introduce vulnerabilities. For example, buffer overflow vulnerabilities, improper key storage, or failure to handle edge cases securely can give an attacker an entry point.
+
+
+5. Weak random number generation: Cryptographic systems often rely on random numbers for key generation or other critical operations. If the random number generator is weak or predictable, it can make the cryptographic system vulnerable. For instance, if an attacker can guess the random numbers being used to generate keys, they can break the encryption.
+
+:bulb: Organizations can mitigate implementation attacks by:
+
+- Using constant-time algorithms to avoid timing leaks.
+
+- Implementing secure random number generators for key material.
+
+- Applying secure padding schemes correctly to avoid padding oracle attacks.
+
+- Using hardware security modules (HSMs) or secure enclaves to protect keys.
+
+- Performing regular security audits and penetration tests to identify potential leaks in the implementation.
+
+### Open Questions ###
+
+1. What are cryptographic implementation attacks, and how do they differ from attacks on the underlying algorithms?
+<details>
+  <summary>Show answer</summary>
+Cryptographic implementation attacks target flaws or weaknesses in how cryptographic algorithms are implemented, rather than attacking the theoretical strength of the algorithm itself. Examples include side-channel attacks (like timing or power analysis), poor random number generation, or incorrect use of padding. Unlike attacks on the algorithm (which exploit mathematical weaknesses), implementation attacks exploit real-world mistakes in coding, configuration, or hardware.
+</details>
+
+2. How can side-channel attacks compromise a cryptographic system even if the encryption algorithm is mathematically strong?
+<details>
+  <summary>Show answer</summary>
+Side-channel attacks gather information from the physical or operational characteristics of a cryptosystem, such as timing information, electromagnetic leaks, or power consumption, to deduce keys or plaintext. For example, if a system performs encryption faster when certain key bits are set to 1, an attacker can measure the execution time to infer the key. These attacks are effective even against strong algorithms like AES or RSA if the implementation leaks measurable signals.
+</details>
+
+3. What measures can organizations take to mitigate cryptographic implementation attacks?
+<details>
+  <summary>Show answer</summary>
+Organizations can mitigate implementation attacks by:
+
+Using constant-time algorithms to avoid timing leaks.
+
+Implementing secure random number generators for key material.
+
+Applying secure padding schemes correctly to avoid padding oracle attacks.
+
+Using hardware security modules (HSMs) or secure enclaves to protect keys.
+
+Performing regular security audits and penetration tests to identify potential leaks in the implementation.
+</details>
+
+---
+
+## 3.7.7 Side-channel   ##
+
+Side-channel attacks are cryptographic attacks that exploit physical or behavioral characteristics of a system during cryptographic operations, rather than breaking the algorithm itself. These attacks focus on indirect information such as power consumption, electromagnetic radiation, or even the time it takes to perform encryption or decryption.
+
+For example, an attacker could measure the power consumption or timing variations during the execution of a cryptographic algorithm. By analyzing this data, the attacker may be able to infer secret information, such as the cryptographic key being used. Side-channel attacks are effective because they don’t require breaking the cryptographic algorithm but instead rely on the physical properties of the system.
+
+These attacks are particularly dangerous because even if a cryptographic algorithm is strong, side-channel leaks can still provide attackers with the means to extract sensitive data. To defend against side-channel attacks, it is essential to implement countermeasures like constant-time algorithms, shielding against physical leaks, and ensuring that systems are resistant to timing and power analysis.
+
+
+## 3.7.8 Fault injection ## 
+
+Fault injection attacks involve deliberately introducing errors or faults into a system to disrupt its normal operation and reveal sensitive information. In the context of cryptography, attackers can manipulate the hardware or the environment (such as temperature or voltage) to cause malfunctions in cryptographic operations. These induced faults can lead to incorrect calculations or system behavior, which the attacker can analyze to deduce secret information, such as cryptographic keys.
+
+For example, an attacker might cause a fault during the decryption process, hoping that the system will produce incorrect plaintext that reveals part of the key or other sensitive data. Fault injection attacks are dangerous because they can bypass strong cryptographic algorithms by exploiting vulnerabilities in the implementation, rather than the algorithm itself.
+
+To mitigate fault injection attacks, systems should be designed with robust error detection and correction mechanisms, and cryptographic operations should be protected against environmental variations. Additionally, using secure hardware and physical protections can help reduce the risk of such attacks.
+
+## 3.7.9 Timing  ## 
+
+Timing attacks are a type of cryptographic attack where an attacker analyzes the time it takes for a system to perform cryptographic operations, such as encryption or decryption. These attacks exploit variations in the time it takes to process different inputs, with the goal of extracting sensitive information, such as cryptographic keys or plaintext.
+
+In a timing attack, the attacker does not need to break the encryption algorithm itself. Instead, they focus on measuring how long it takes for the system to respond to different inputs. For example, if the system takes a different amount of time to perform encryption depending on the value of the key or the data being processed, the attacker can use this timing information to deduce parts of the key or uncover patterns in the data.
+
+A common example of a timing attack involves a system performing an operation like comparing two values (such as a key or plaintext). If the system checks each bit of the value one by one, it may take longer to compare values that are more similar or require more bits to be checked. By measuring these time differences, the attacker can gradually learn about the structure of the secret value, such as identifying which bits of a key are correct.
+
+:bulb: These attacks are particularly effective when the system does not take precautions to ensure that its operations take constant time, regardless of the input. Insecure implementations that process data in variable times based on its content are more vulnerable to timing attacks.
+
+To protect against timing attacks, cryptographic implementations should be designed to ensure constant-time operations. This means that the system should perform the same amount of computation regardless of the values being processed. Additionally, avoiding data-dependent branches, loops, or memory access patterns that can vary with the input helps reduce the risk of these attacks.
+
+### Open Questions ###
+
+1. What is the main principle behind a timing attack in cryptography?
+<details>
+  <summary>Show answer</summary>
+A timing attack exploits variations in the time a system takes to perform cryptographic operations. By carefully measuring how long operations like encryption, decryption, or key comparison take for different inputs, an attacker can infer sensitive information such as cryptographic keys or patterns in plaintext. The attack targets implementation weaknesses rather than the algorithm itself.
+</details>
+
+2. Why are variable-time implementations of cryptographic operations vulnerable to timing attacks?
+<details>
+  <summary>Show answer</summary>
+Variable-time implementations process different inputs in different amounts of time, often due to data-dependent branches, loops, or bit-by-bit comparisons. These time variations leak information about the processed data or key. An attacker can analyze the timing differences to gradually reconstruct secret keys or plaintext, making the system vulnerable despite using a strong cryptographic algorithm.
+</details>
+
+3. What countermeasures can be implemented to defend against timing attacks?
+<details>
+  <summary>Show answer</summary>
+To protect against timing attacks, cryptographic implementations should:
+
+Ensure constant-time operations, performing the same amount of computation regardless of input.
+
+Avoid data-dependent branches, loops, or memory access patterns.
+
+Use cryptographic libraries or hardware designed with side-channel resistance.
+
+These measures prevent attackers from inferring sensitive information from timing variations.
+</details>
+
+---
+
+## 3.7.10 Man-in-the-middle (MITM)  ##
+
