Update 3.07 Understand methods of cryptanalytic attacks.md

--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -446,3 +446,34 @@ These measures prevent attackers from inferring sensitive information from timin
 
 ## 3.7.10 Man-in-the-middle (MITM)  ##
 
+Man-in-the-Middle (MITM) attacks in the context of cryptographic attacks occur when an attacker intercepts and potentially alters the communication between two parties who are using cryptographic protocols to secure their data. In a MITM cryptographic attack, the attacker can manipulate the cryptographic keys or the encrypted data being transmitted between the two parties, even though the parties may believe they are securely communicating with each other.
+
+For instance, in a typical cryptographic protocol like SSL/TLS, an attacker may intercept the key exchange process and replace the public keys of the legitimate parties with their own. This allows the attacker to decrypt and re-encrypt the data before forwarding it to the intended recipient. The attacker can also alter the communication in transit, such as modifying messages, injecting malicious data, or even impersonating one of the communicating parties.
+
+:brain: MITM attacks can be particularly dangerous in cryptographic systems that rely on key exchange mechanisms, such as public key cryptography. If an attacker successfully intercepts and manipulates the keys during the key exchange process, they can decrypt all subsequent communications, potentially compromising sensitive data like passwords, financial transactions, or personal information.
+
+To defend against MITM attacks in cryptographic systems, it is essential to **use strong authentication methods and secure key exchange protocols**. For example, using digital certificates to verify the authenticity of public keys during the key exchange process, employing public key infrastructure (PKI), and implementing mutual authentication can prevent attackers from successfully impersonating one of the parties. Additionally, ensuring that communications are protected by robust encryption, such as with SSL/TLS, can mitigate the risk of interception and alteration by a MITM attacker.
+
+### Open Questions ###
+
+1. How does a MITM attack compromise a cryptographic communication?
+<details>
+  <summary>Show answer</summary>
+In a MITM attack, the attacker intercepts the communication between two parties and can manipulate the cryptographic keys or encrypted data. By replacing public keys or decrypting and re-encrypting messages, the attacker can read, modify, or inject data without the parties realizing their communication is compromised.
+</details>
+
+2. Why are key exchange mechanisms particularly vulnerable to MITM attacks?
+<details>
+  <summary>Show answer</summary>
+Key exchange protocols, especially in public key cryptography, rely on parties trusting each other’s public keys. If an attacker intercepts the key exchange and substitutes their own public keys, they can decrypt all subsequent messages. This makes key exchanges a critical point of vulnerability for MITM attacks.
+</details>
+
+3. What are effective defenses against MITM attacks in cryptographic systems?
+<details>
+  <summary>Show answer</summary>
+Strong authentication and secure key exchange protocols are essential. Using digital certificates, public key infrastructure (PKI), mutual authentication, and robust encryption like SSL/TLS ensures that public keys are verified and communications remain confidential, integrity-protected, and resistant to interception or manipulation.
+</details>
+
+---
+
+
